--- a/styles/style2.css
+++ b/styles/style2.css
@@ -1,5 +1,5 @@
 html{
- font-size 10px;
+ font-size: 10px;
  font-family: 'Philosopher', sans-serif;
 }
 
@@ -10,7 +10,7 @@ h1{
 
 p {
  font-size: 20px;
- text-align: 100px;
+ 
 }
 
 .hero {
