--- a/styles/LcasImg.css
+++ b/styles/LcasImg.css
@@ -51,3 +51,16 @@ body {
 #about{
     background: white;
 }
+
+.Image{
+
+    vertical-align:central;
+
+}
+
+.L1 {
+    width: 60px;
+    height: 156px;
+    margin-left:50%;
+    margin-right:50%;
+}
