--- a/styles/MothersDay.css
+++ b/styles/MothersDay.css
@@ -1,3 +1,11 @@
+html{
+
+    width:100%;
+    margin:0;
+    padding:0;
+
+}
+
 body{
 
     font-family: 'Times New Roman', Times, serif;
@@ -21,8 +29,14 @@ body{
 }
 
 
-.int {
+
+.int  {
+    background-color: antiquewhite;
+    animation: 3s ease-out 0s 1 introanim;
+    border: solid;
+    display: inline-flex;
     
-    animation: 1s ease-out 0s 1 introanim;
     
+
 }
+
