--- a/styles/MothersDay.css
+++ b/styles/MothersDay.css
@@ -1,9 +1,9 @@
-html{
-
-    width:100%;
-    margin:0;
-    padding:0;
-
+html {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    background-color: #e6b0af;
+    background-image: url('https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse4.mm.bing.net%2Fth%3Fid%3DOIP.IdJemNnwwoGywfV-imtHIAHaEo%26pid%3DApi&f=1');
 }
 
 body{
@@ -20,7 +20,7 @@ body{
     }
     
     60%{
-        transform: translateY(30%);
+        transform: translateY(10%);
     }
 
     100% {
@@ -34,9 +34,17 @@ body{
     background-color: antiquewhite;
     animation: 3s ease-out 0s 1 introanim;
     border: solid;
-    display: inline-flex;
+    display: inline-block;
     
     
 
 }
 
+.int img{
+    
+    width:378px;
+    height:504px; 
+    padding-bottom:10px;
+
+
+}
