--- a/styles/MothersDay.css
+++ b/styles/MothersDay.css
@@ -2,7 +2,6 @@ html {
     width: 100%;
     margin: 0;
     padding: 0;
-    
     background-image: url('https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse4.mm.bing.net%2Fth%3Fid%3DOIP.IdJemNnwwoGywfV-imtHIAHaEo%26pid%3DApi&f=1');
 }
 
@@ -15,20 +14,29 @@ body{
 }
 
 @keyframes introanim {
+    
     0% {
+        
         transform: translateY(-100%);
+    
     }
     
     60%{
+       
         transform: translateY(10%);
+    
     }
 
     100% {
+        
         transform: translateY(0);
+    
     }
+
 }
 
 @keyframes secoanim {
+    
     0% {
         opacity:0;
         transform: translateX(-100%);
@@ -46,6 +54,7 @@ body{
         transform: translateX(0);
 
     }
+
 }
 
 
@@ -81,6 +90,7 @@ body{
     animation: 3s ease-out 2s 1  normal forwards secoanim;
     border: solid;
     display: inline-block;
+    width:800px;
 
 }
 
