--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 html
 { 
   font-size: 10px;
@@ -25,49 +29,67 @@ body{
     color:black;
     padding: 10px;
 }
-
-
-#Navbar{
-    background-color:lightslategrey;
-    
-
+/* Navagation */
+#Navbar {
+    width: 100%;
+    background-color: lightslategrey;
 }
 
-#Navbar ul{
+#Navbar a {
+    float: left;
     
-    padding:0;
-    list-style: none;
-}
-
-#Navbar li{
-    
-    display:inline;
-    padding: 0px;
-   
-}
-
-#Navbar a 
-{
+    display: block;
     color: #2c333a;
+    text-align: center;
+    padding: 20px;
+    
+    text-decoration: none;
+    
+
+}
+
+#Navbar a#Dark{
+    float:right;
+}
+/*#Navbar a
+{
+    
     text-decoration: none;
     font-size: 18px;
     word-spacing: 20px;
     padding: 30px;
-    width: 100%;
-    white-space: nowrap;
-    float: initial;
+    
+    
+    float: right;
 }
-
-#Navbar a:hover
-{
-   
+*/
+#Navbar a:hover {
     color: black;
-   
     background-color: white;
-   
 }
 
+/* Side Bar */
+#row {
+    display: -ms-flexbox; /* IE10 */
+    display: flex;
+    -ms-flex-wrap: wrap; /* IE10 */
+    flex-wrap: wrap;
+}
 
+.side {
+    flex: 30%; /* Set the width of the sidebar */
+    background-color: #f1f1f1; /* Grey background color */
+    padding: 20px; /* Some padding */
+}
+
+/* Main column */
+main {
+    flex: 70%; /* Set the width of the main content */
+    background-color: white; /* White background color */
+    padding: 20px; /* Some padding */
+}
+
+/* Description */
 #AboutSec h1{ 
     
     font-size: 50px;
@@ -87,7 +109,7 @@ body{
 }
 
 
-
+/*Footer*/
 
 #List th, tr, td{
     word-spacing: 20px;
@@ -114,4 +136,24 @@ body{
     margin-left: 10px;
     margin-top: 10px;
    
+}
+
+
+
+/* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
+
+@media screen and (max-width: 700px) {
+    .row {
+        flex-direction: column;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .navbar{
+        width:0;
+    }
+    .navbar a {
+        float: none;
+        width: 100%;
+    }
 }
