--- a/styles/style.css
+++ b/styles/style.css
@@ -51,24 +51,13 @@ body{
 #Navbar a#Dark{
     float:right;
 }
-/*#Navbar a
-{
-    
-    text-decoration: none;
-    font-size: 18px;
-    word-spacing: 20px;
-    padding: 30px;
-    
-    
-    float: right;
-}
-*/
+
 #Navbar a:hover {
     color: black;
     background-color: white;
 }
 
-/* Side Bar */
+/* Side and Middle */
 #row {
     display: -ms-flexbox; /* IE10 */
     display: flex;
@@ -76,14 +65,25 @@ body{
     flex-wrap: wrap;
 }
 
-.side {
+/* Side Bar */
+
+#side {
     flex: 30%; /* Set the width of the sidebar */
     background-color: #f1f1f1; /* Grey background color */
     padding: 20px; /* Some padding */
 }
 
+#info{
+ text-align:center;
+ 
+}
+
+#info img{
+    
+}
+
 /* Main column */
-main {
+#main {
     flex: 70%; /* Set the width of the main content */
     background-color: white; /* White background color */
     padding: 20px; /* Some padding */
