--- a/styles/style.css
+++ b/styles/style.css
@@ -23,23 +23,24 @@ body{
     
 }
 
-
 #main-head{
     background-color: dimgray;
     color:black;
     padding: 10px;
 }
+
 /* Navagation */
 #Navbar {
     width: 100%;
     background-color: lightslategrey;
+    color:black;
 }
 
 #Navbar a {
     float: left;
     
     display: block;
-    color: #2c333a;
+    color: black;
     text-align: center;
     padding: 20px;
     
@@ -78,9 +79,10 @@ body{
  
 }
 
-#info img{
-    
-}
+    #info img {
+        height: 404.333333333px;
+        width: 233.333333333px;
+    }
 
 /* Main column */
 #main {
@@ -111,7 +113,19 @@ body{
 
 /*Footer*/
 
+footer{
+    border-top: solid;
+    margin-top:50px;
+}
+
+#List{
+    margin-top: 50px;
+    margin-left:400px;
+    
+}
+
 #List th, tr, td{
+    
     word-spacing: 20px;
     margin: 20px;
     padding: 20px;
@@ -142,11 +156,7 @@ body{
 
 /* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
 
-@media screen and (max-width: 700px) {
-    .row {
-        flex-direction: column;
-    }
-}
+
 
 @media screen and (max-width: 400px) {
     .navbar{
