--- a/styles/style.css
+++ b/styles/style.css
@@ -49,6 +49,18 @@ body{
 
 }
 
+#Navbar #date{
+    
+    float:right;
+}
+
+
+#Navbar #date:hover{
+    
+    background-color:#778899;
+}
+
+
 #Navbar a#Dark{
     float:right;
 }
@@ -57,6 +69,8 @@ body{
     color: black;
     background-color: white;
 }
+
+
 
 /* Side and Middle */
 #row {
