--- a/styles/Arch.css
+++ b/styles/Arch.css
@@ -8,7 +8,7 @@ body {
     image-rendering: -moz-crisp-edges;
     margin: 0;
     background: black;
-    max-width: 1136px;
+    max-width: 1262.8px;
     max-height: 642.933px;
 }
 
@@ -35,9 +35,16 @@ body {
     transform: translateY(-90px) rotateY(56deg);
 }
 
-#gallery
-{
+#gallery {
     display: none;
+    position: absolute;
+    transform: translateX(300px) translateY(-600px);
+}
+
+#farm 
+{
+    width: 100%;
+    height:100%;
 }
 
 * {
@@ -51,7 +58,11 @@ body {
 
 /* Hide the images by default */
 .mySlides {
-  display: none;
+    display: block;
+    transform:translateX(100px);
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
 }
 
 /* Add a pointer when hovering over the thumbnail images */
