--- a/styles/LcasImg.css
+++ b/styles/LcasImg.css
@@ -75,9 +75,17 @@ body {
 
 #change1 {
     position: absolute;
-    transform: translate(645px, 180px);
+    text-align: center;
     color: black;
     text-decoration: none;
+    margin-left: 48.3%;
+    margin-right: 50%;
+}
+#txt1 {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top:230px;
+    left:50%;
 }
 
 /* Slideshow container */
@@ -100,22 +108,22 @@ body {
     top: 60%;
     width: auto;
     padding: 16px;
-    margin-top: -50px;
+    margin-top: 0px;
     color: black;
     font-weight: bold;
     font-size: 20px;
-    border-radius: 0 3px 3px 0;
+    border-radius: 0 -3px -3px 0;
     user-select: none;
     -webkit-user-select: none;
 }
     /* Position the "next button" to the right */
 .next {
-    left: 45%;
+    left: 42%;
     border-radius: 3px 0 0 3px;
 }
 .prev {
-    right: 45%;
-    border-radius: 3px 0 0 3px;
+    right: 42%;
+    border-radius: 0 3px 3px 0;
 }
 
 /* On hover, add a black background color with a little bit see-through */
@@ -129,11 +137,12 @@ body {
 
 /* Caption text */
 .text {
-    font-size: 15px;
-    padding: 8px 12px;
     position: absolute;
-    width: 105%;
-    text-align: center;
+    color: black;
+    text-decoration: none;
+    margin-left: 45%;
+    margin-right: 31%;
+    margin-top: 210px;
 }
 
 /* Number text (1/3 etc) */
