--- a/styles/Arch.css
+++ b/styles/Arch.css
@@ -67,6 +67,8 @@ body {
 .mySlides {
     display: block;
     transform: translateX(-155px);
+    width: 622px;
+    height: 299px;
     margin-left: auto;
     margin-right: auto;
     width: 50%;
@@ -107,7 +109,7 @@ body {
 
 /* Number text (1/3 etc) */
 .numbertext {
-  color: #f2f2f2;
+  color: black;
   font-size: 12px;
   padding: 8px 12px;
   position: absolute;
