--- a/styles/Arch.css
+++ b/styles/Arch.css
@@ -29,9 +29,7 @@ body {
     
     width: 72px;
     height: 72px;
-    
     position: absolute;
-   
     transform: translateY(-90px) rotateY(56deg);
 }
 
@@ -41,17 +39,27 @@ body {
     transform: translateX(300px) translateY(-600px);
 }
 
+#ImgUpld {
+  position: inherit;
+}
+
+#myFile {
+  margin-left: 89%;
+}
+
+#submit{
+  margin-left: 86%;
+  margin-top: 5%;
+}
+
 #farm 
 {
     width: 100%;
     height:100%;
 }
 
-#images
-{
-
-    
-
+#images{
+  height: fit-content;
 }
 
 * {
